docs/1.18/redstone-arsenal/index.md
---
title: Redstone Arsenal (Minecraft 1.18)
---

This is a brief summary of the special abilities of all equipment in Redstone Arsenal for Minecraft 1.18. 

<table class="uk-table uk-table-striped uk-text-small">
   <thead>
      <tr>
         <th>Item</th>
         <th>Unempowered</th>
         <th>Empowered</th>
      </tr>
   </thead>
   <tbody>
      <tr>
         <td>Sword</td>
         <td>---</td>
         <td>Coalesces flux energy on the blade, releasing it as a piercing projectile when swung.</td>
      </tr>
      <tr>
         <td>Shield</td>
         <td>Blocks instances of flux damage.</td>
         <td>When initially raised or upon blocking damage, releases a dispersion field that knocks nearby mobs and projectiles back.</td>
      </tr>
      <tr>
         <td>Bow</td>
         <td>---</td>
         <td>Propels fired arrows at hyperspeed, often allowing them to reach their destinations instantly.</td>
      </tr>
      <tr>
         <td>Crossbow</td>
         <td>The crossbow can be reloaded with up to 3 shots. Left click to fire.</td>
         <td>Fires all 3 shots at once, vertically offset from each other.</td>
      </tr>
      <tr>
         <td>Quiver</td>
         <td>Produces flux arrows that deal armor-piercing damage.</td>
         <td>Produces gravity-defying arrows when shot from a bow, and arrows that explode on contact when shot from a crossbow.</td>
      </tr>
      <tr>
         <td>Trident</td>
         <td>Attack range increased by 2 blocks.</td>
         <td>When the user is off the ground, the trident can be swung to launch them downwards in the direction they are looking. Upon landing, the kinetic energy is used to deal armor piercing damage to nearby mobs, negating fall damage. Synergizes with the riptide enchantment.</td>
      </tr>
      <tr>
         <td>Pickaxe</td>
         <td>Can be used to charge the air with flux, producing a permanent light source. Using it on fluxed air will remove the effect. Using it while crouching will remove all fluxed air blocks in a large radius.</td>
         <td>Automatically creates fluxed air when the user is in dark locations.</td>
      </tr>
      <tr>
         <td>Axe</td>
         <td>---</td>
         <td>Breaks up to 36 vertically contiguous wood blocks of the same type.</td>
      </tr>
      <tr>
         <td>Shovel</td>
         <td>Effectively mines powder snow. Can be used on farmland or dirt paths to revert them to dirt.</td>
         <td>When used on dirt-type blocks, creates a flux-infused path block that is faster to walk on.</td>
      </tr>
      <tr>
         <td>Hammer</td>
         <td>---</td>
         <td>Mining speed greatly reduced. Damage and attack speed increased. Hitting a mob grants the user 2s of speed. Using it on the ground creates a shockwave, which knocks affected mobs back, inflicts the sundered debuff on affected mobs, and grants the user a 2.5s strength buff. Hitting a mob while this buff is active will extend its duration by 0.5s.</td>
      </tr>
      <tr>
         <td>Excavator</td>
         <td>Effectively mines powder snow. Can be used to place matching earth-type blocks in its area of effect.</td>
         <td>Area of effect increased to 5x5.</td>
      </tr>
      <tr>
         <td>Sickle</td>
         <td>Performs radial sweeping attacks when swung, regardless of whether a mob is directly hit. Accepts the sweeping edge enchantment.</td>
         <td>Only damages adult (non-baby) mobs. Exclusively breaks "mature" plants, such as fully grown crops, melons/pumpkin blocks (not stems), non-base sugarcane/cactus/kelp/vine/bamboo blocks, natural leaf blocks, tall grass/flowers, and big dripleaves.</td>
      </tr>
      <tr>
         <td>Fishing Rod</td>
         <td>---</td>
         <td>Can be used to reel in hooked mobs with much greater control. The mob is unhooked if the user attacks it or uses the rod when crouching.</td>
      </tr>
      <tr>
         <td>Battle Wrench</td>
         <td>Can be thrown, dealing damage to mobs and rotating blocks in its path. Returns after hitting something or when it is 16 blocks away from the user.</td>
         <td>Upon hitting anything or reaching its max distance, instantly teleports back to the user's inventory.</td>
      </tr>
      <tr>
         <td>Elytra</td>
         <td>Brakes when the user crouches in the air.</td>
         <td>Uses flux energy to constantly propel the user, similar to continuously using firework rockets.</td>
      </tr>
      <tr>
         <td>Elytra Controller</td>
         <td>Unempowering the controller will also unempower the equipped elytra. Using the controller will boost the user, similar to using a single firework rocket. If the user is on the ground, using the controller will allow them to easily take off in the direction they are looking.</td>
         <td>Empowering the controller will also empower the equipped elytra.</td>
      </tr>
      <tr>
         <td>Armor</td>
         <td>Makes piglins neutral when worn. Each piece grants a single charge of flux shielding. A charge can be used to negate a single instance of damage, up to 500 damage points. Charges regenerate after 30 seconds.</td>
         <td>---</td>
      </tr>
   </tbody>
</table>
